# rust-playground

./: Cargo.toml  Makefile.toml  build.rs  memory_ordering.md
.cargo/: config.toml
src/: alignment.rs  arc_swap.rs  async_trait.rs  atomic_acquire_release.rs  better_default_derive.rs  box_dropping.rs  box_future.rs  compare_mixed_numeric_types.rs  compile_time.rs  condvar.rs  const_generic_parameters.rs  cow.rs  decimal.rs  derive_proto.rs  dyn_trait.rs  elegant_recursion.rs  enum_discriminant.rs  examples.proto  experiment_1.rs  experiment_2.rs  experiment_3.rs  experiment_4.rs  format_named_arguments.rs  from_str_radix.rs  gat.rs  iter_tests.rs  json_schema.rs  lazy_static.rs  lib.rs  lifetimes_1.rs  main.rs  match_causes_deadlock.rs  maybe_uninit.rs  multi_parameters.rs  multiline.rs  must_use.rs  nom.rs  notify.rs  opentelemetry.rs  pin.rs  (+15 more)
src/codewars/: is_prime.rs  mod.rs
src/dispatch/: dynamic.rs  mod.rs  static_dispatch.rs
src/diy/: mod.rs  spinlock.rs
src/diy/arc/: arc1.rs  arc2.rs  mod.rs
src/diy/channel/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  channel5.rs  channel6.rs  mod.rs
src/diy/mutex/: mod.rs  mutex_1.rs  mutex_2.rs  mutex_3.rs
src/diy/rwlock/: mod.rs  rwlock_1.rs  rwlock_2.rs  rwlock_3.rs
