[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
tokio = { version = "1.21.1", features = ["full"]}
tokio-stream = "0.1.10"
async-stream = "0.3.3"

hex = "0.4.3"

rand = "0.8.5"

serde = { version = "1.0.147", features = ["derive", "serde_derive"] }
serde_json = "1.0.87"

tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["json", "serde", "serde_json", "time", "env-filter"] }
tracing-futures = { version = "0.2.5", features = ["tokio"] }

log = "0.4.17"
env_logger = "0.9.3"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }

opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.17.0"
tracing-opentelemetry = "0.18.0"
arc-swap = "1.5.1"
once_cell = "1.16.0"
lazy_static = "1.4.0"
thiserror = "1.0.37"
reqwest = "0.11.13"
tower = "0.4.13"
rust_decimal = { version = "1.27.0", features = ["serde-float"] }
rust_decimal_macros = "1.27.0"
schemars = "0.8.11"
jsonschema = "0.16.1"
prost = "0.11.6"
displaydoc = "0.2.3"
toml = "0.7.2"
yoke = "0.7.0"
chrono = "0.4.23"
serde_with = { version = "2.2.0", features = ["chrono"] }
humantime-serde = "1.1.1"
notify = "5.1.0"
serde_yaml = "0.9.17"
indoc = "2.0.0"
signal-hook = "0.3.15"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
better-default-derive = "0.1.1"

[build-dependencies]
prost-build = "0.11.6"

[dev-dependencies]
pretty_assertions = "1.3.0"


[features]
nightly = []
