[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 1

[build-dependencies]
prost-build = "0.13.2"

[dependencies]
futures = "0.3.30"
tokio = { version = "1.40", features = ["full"]}
async-stream = "0.3"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = "1.0.128"
tracing = { version = "0.1", features = ["log"] }
log = "0.4.22"
once_cell = "1.19.0"
lazy_static = "1.5.0"
thiserror = "1.0.63"
reqwest = "0.12.7"
tower = "0.5.1"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
rust_decimal_macros = "1.36.0"
schemars = "0.8.21"
jsonschema = "0.19.1"
prost = "0.13.2"
displaydoc = "0.2.5"
humantime-serde = "1.1.1"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
derive_more = { version = "1", features = ["full"] }
async-trait = "0.1.82"
nom = "7.1.3"
itertools = "0.13.0"
bytes = { version = "1.7.1", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
notify = "6.1.1"
toml = "0.8.19"
tokio-stream = "0.1"
proptest = "1.5.0"
arc-swap = "1.7.1"
env_logger = "0.11.5"
serde_yaml = "0.9.34"
test-log = { version = "0.2.16", default-features = false, features = ["trace"] }
indoc = "2.0.5"
yoke = "0.7.4"

[features]
nightly = []
